[package]
name = "eiffel"
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "eiffel_macros",
    "eiffel_macros_gen"
]

[dependencies]
syn = { version = "2.0.50", features = ["full"] }
quote = "1.0"
thiserror = "1.0.57"
eiffel_macros = { path = "eiffel_macros" }
eiffel_macros_gen = { path = "eiffel_macros_gen" }

[dev-dependencies]
release-plz = "0.3.49"
