[package]
name = "eiffel"
version = "0.0.4"
edition = "2021"
authors = ["Matthias Götzke <m.goetzke@curasystems.de>"]
homepage = "https://github.com/matthiasg/eiffel"
license = "MIT"
description = "Eiffel is a library for Eiffel language inspired guard clauses with Rust macros."
documentation = "https://docs.rs/eiffel"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "eiffel-macros",
    "eiffel-macros-gen"
]

[dependencies]
syn = { version = "2.0.50", features = ["full"] }
quote = "1.0"
thiserror = "1.0.57"
eiffel-macros = { path = "eiffel-macros", version = ">=0.0.3" }
eiffel-macros-gen = { path = "eiffel-macros-gen", version = ">=0.0.3" }
