[package]
name = "eiffel-macros"
version = "0.0.4"
edition = "2021"
authors = ["Matthias Götzke <m.goetzke@curasystems.de>"]
homepage = "https://github.com/matthiasg/eiffel"
license = "MIT"
description = "Eiffel is a library for Eiffel language inspired guard clauses with Rust macros. This is the macro rules part of the library."
documentation = "https://docs.rs/eiffel-macros"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.57"
